# serializer version: 1
# name: TestEditSequenceMetric.test_collect_as_dict_equivalence_with_snapshot[event]
  dict({
    tuple(
      1,
      1,
    ): 4.0,
    tuple(
      1,
      2,
    ): 15.0,
    tuple(
      1,
      3,
    ): 12.0,
    tuple(
      1,
      4,
    ): 11.0,
    tuple(
      1,
      5,
    ): 17.0,
    tuple(
      1,
      6,
    ): 11.0,
    tuple(
      1,
      7,
    ): 11.0,
    tuple(
      1,
      8,
    ): 11.0,
    tuple(
      1,
      9,
    ): 10.0,
    tuple(
      1,
      10,
    ): 11.0,
    tuple(
      2,
      1,
    ): 15.0,
    tuple(
      2,
      2,
    ): 2.0,
    tuple(
      2,
      3,
    ): 14.0,
    tuple(
      2,
      4,
    ): 14.0,
    tuple(
      2,
      5,
    ): 16.0,
    tuple(
      2,
      6,
    ): 15.0,
    tuple(
      2,
      7,
    ): 15.0,
    tuple(
      2,
      8,
    ): 15.0,
    tuple(
      2,
      9,
    ): 15.0,
    tuple(
      2,
      10,
    ): 16.0,
    tuple(
      3,
      1,
    ): 12.0,
    tuple(
      3,
      2,
    ): 14.0,
    tuple(
      3,
      3,
    ): 2.0,
    tuple(
      3,
      4,
    ): 12.0,
    tuple(
      3,
      5,
    ): 18.0,
    tuple(
      3,
      6,
    ): 13.0,
    tuple(
      3,
      7,
    ): 11.0,
    tuple(
      3,
      8,
    ): 12.0,
    tuple(
      3,
      9,
    ): 11.0,
    tuple(
      3,
      10,
    ): 12.0,
    tuple(
      4,
      1,
    ): 11.0,
    tuple(
      4,
      2,
    ): 14.0,
    tuple(
      4,
      3,
    ): 12.0,
    tuple(
      4,
      4,
    ): 0.0,
    tuple(
      4,
      5,
    ): 16.0,
    tuple(
      4,
      6,
    ): 12.0,
    tuple(
      4,
      7,
    ): 10.0,
    tuple(
      4,
      8,
    ): 10.0,
    tuple(
      4,
      9,
    ): 9.0,
    tuple(
      4,
      10,
    ): 11.0,
    tuple(
      5,
      1,
    ): 17.0,
    tuple(
      5,
      2,
    ): 16.0,
    tuple(
      5,
      3,
    ): 18.0,
    tuple(
      5,
      4,
    ): 16.0,
    tuple(
      5,
      5,
    ): 5.0,
    tuple(
      5,
      6,
    ): 17.0,
    tuple(
      5,
      7,
    ): 17.0,
    tuple(
      5,
      8,
    ): 17.0,
    tuple(
      5,
      9,
    ): 17.0,
    tuple(
      5,
      10,
    ): 17.0,
    tuple(
      6,
      1,
    ): 11.0,
    tuple(
      6,
      2,
    ): 15.0,
    tuple(
      6,
      3,
    ): 13.0,
    tuple(
      6,
      4,
    ): 12.0,
    tuple(
      6,
      5,
    ): 17.0,
    tuple(
      6,
      6,
    ): 2.0,
    tuple(
      6,
      7,
    ): 12.0,
    tuple(
      6,
      8,
    ): 13.0,
    tuple(
      6,
      9,
    ): 12.0,
    tuple(
      6,
      10,
    ): 13.0,
    tuple(
      7,
      1,
    ): 11.0,
    tuple(
      7,
      2,
    ): 15.0,
    tuple(
      7,
      3,
    ): 11.0,
    tuple(
      7,
      4,
    ): 10.0,
    tuple(
      7,
      5,
    ): 17.0,
    tuple(
      7,
      6,
    ): 12.0,
    tuple(
      7,
      7,
    ): 1.0,
    tuple(
      7,
      8,
    ): 8.0,
    tuple(
      7,
      9,
    ): 7.0,
    tuple(
      7,
      10,
    ): 10.0,
    tuple(
      8,
      1,
    ): 11.0,
    tuple(
      8,
      2,
    ): 15.0,
    tuple(
      8,
      3,
    ): 12.0,
    tuple(
      8,
      4,
    ): 10.0,
    tuple(
      8,
      5,
    ): 17.0,
    tuple(
      8,
      6,
    ): 13.0,
    tuple(
      8,
      7,
    ): 8.0,
    tuple(
      8,
      8,
    ): 4.0,
    tuple(
      8,
      9,
    ): 7.0,
    tuple(
      8,
      10,
    ): 10.0,
    tuple(
      9,
      1,
    ): 10.0,
    tuple(
      9,
      2,
    ): 15.0,
    tuple(
      9,
      3,
    ): 11.0,
    tuple(
      9,
      4,
    ): 9.0,
    tuple(
      9,
      5,
    ): 17.0,
    tuple(
      9,
      6,
    ): 12.0,
    tuple(
      9,
      7,
    ): 7.0,
    tuple(
      9,
      8,
    ): 7.0,
    tuple(
      9,
      9,
    ): 0.0,
    tuple(
      9,
      10,
    ): 10.0,
    tuple(
      10,
      1,
    ): 11.0,
    tuple(
      10,
      2,
    ): 16.0,
    tuple(
      10,
      3,
    ): 12.0,
    tuple(
      10,
      4,
    ): 11.0,
    tuple(
      10,
      5,
    ): 17.0,
    tuple(
      10,
      6,
    ): 13.0,
    tuple(
      10,
      7,
    ): 10.0,
    tuple(
      10,
      8,
    ): 10.0,
    tuple(
      10,
      9,
    ): 10.0,
    tuple(
      10,
      10,
    ): 0.0,
  })
# ---
# name: TestEditSequenceMetric.test_collect_as_dict_equivalence_with_snapshot[interval]
  dict({
    tuple(
      1,
      1,
    ): 1.0,
    tuple(
      1,
      2,
    ): 6.0,
    tuple(
      1,
      3,
    ): 5.0,
    tuple(
      1,
      4,
    ): 6.0,
    tuple(
      1,
      5,
    ): 6.0,
    tuple(
      1,
      6,
    ): 7.0,
    tuple(
      1,
      7,
    ): 5.0,
    tuple(
      1,
      8,
    ): 7.0,
    tuple(
      1,
      9,
    ): 5.0,
    tuple(
      1,
      10,
    ): 5.0,
    tuple(
      2,
      1,
    ): 6.0,
    tuple(
      2,
      2,
    ): 1.0,
    tuple(
      2,
      3,
    ): 6.0,
    tuple(
      2,
      4,
    ): 6.0,
    tuple(
      2,
      5,
    ): 6.0,
    tuple(
      2,
      6,
    ): 7.0,
    tuple(
      2,
      7,
    ): 6.0,
    tuple(
      2,
      8,
    ): 7.0,
    tuple(
      2,
      9,
    ): 4.0,
    tuple(
      2,
      10,
    ): 5.0,
    tuple(
      3,
      1,
    ): 5.0,
    tuple(
      3,
      2,
    ): 6.0,
    tuple(
      3,
      3,
    ): 0.0,
    tuple(
      3,
      4,
    ): 6.0,
    tuple(
      3,
      5,
    ): 6.0,
    tuple(
      3,
      6,
    ): 7.0,
    tuple(
      3,
      7,
    ): 3.0,
    tuple(
      3,
      8,
    ): 7.0,
    tuple(
      3,
      9,
    ): 4.0,
    tuple(
      3,
      10,
    ): 4.0,
    tuple(
      4,
      1,
    ): 6.0,
    tuple(
      4,
      2,
    ): 6.0,
    tuple(
      4,
      3,
    ): 6.0,
    tuple(
      4,
      4,
    ): 0.0,
    tuple(
      4,
      5,
    ): 6.0,
    tuple(
      4,
      6,
    ): 7.0,
    tuple(
      4,
      7,
    ): 5.0,
    tuple(
      4,
      8,
    ): 6.0,
    tuple(
      4,
      9,
    ): 6.0,
    tuple(
      4,
      10,
    ): 6.0,
    tuple(
      5,
      1,
    ): 6.0,
    tuple(
      5,
      2,
    ): 6.0,
    tuple(
      5,
      3,
    ): 6.0,
    tuple(
      5,
      4,
    ): 6.0,
    tuple(
      5,
      5,
    ): 1.0,
    tuple(
      5,
      6,
    ): 6.0,
    tuple(
      5,
      7,
    ): 6.0,
    tuple(
      5,
      8,
    ): 7.0,
    tuple(
      5,
      9,
    ): 6.0,
    tuple(
      5,
      10,
    ): 6.0,
    tuple(
      6,
      1,
    ): 7.0,
    tuple(
      6,
      2,
    ): 7.0,
    tuple(
      6,
      3,
    ): 7.0,
    tuple(
      6,
      4,
    ): 7.0,
    tuple(
      6,
      5,
    ): 6.0,
    tuple(
      6,
      6,
    ): 0.0,
    tuple(
      6,
      7,
    ): 7.0,
    tuple(
      6,
      8,
    ): 7.0,
    tuple(
      6,
      9,
    ): 7.0,
    tuple(
      6,
      10,
    ): 7.0,
    tuple(
      7,
      1,
    ): 5.0,
    tuple(
      7,
      2,
    ): 6.0,
    tuple(
      7,
      3,
    ): 3.0,
    tuple(
      7,
      4,
    ): 5.0,
    tuple(
      7,
      5,
    ): 6.0,
    tuple(
      7,
      6,
    ): 7.0,
    tuple(
      7,
      7,
    ): 1.0,
    tuple(
      7,
      8,
    ): 7.0,
    tuple(
      7,
      9,
    ): 4.0,
    tuple(
      7,
      10,
    ): 3.0,
    tuple(
      8,
      1,
    ): 7.0,
    tuple(
      8,
      2,
    ): 7.0,
    tuple(
      8,
      3,
    ): 7.0,
    tuple(
      8,
      4,
    ): 6.0,
    tuple(
      8,
      5,
    ): 7.0,
    tuple(
      8,
      6,
    ): 7.0,
    tuple(
      8,
      7,
    ): 7.0,
    tuple(
      8,
      8,
    ): 1.0,
    tuple(
      8,
      9,
    ): 7.0,
    tuple(
      8,
      10,
    ): 7.0,
    tuple(
      9,
      1,
    ): 5.0,
    tuple(
      9,
      2,
    ): 4.0,
    tuple(
      9,
      3,
    ): 4.0,
    tuple(
      9,
      4,
    ): 6.0,
    tuple(
      9,
      5,
    ): 6.0,
    tuple(
      9,
      6,
    ): 7.0,
    tuple(
      9,
      7,
    ): 4.0,
    tuple(
      9,
      8,
    ): 7.0,
    tuple(
      9,
      9,
    ): 0.0,
    tuple(
      9,
      10,
    ): 4.0,
    tuple(
      10,
      1,
    ): 5.0,
    tuple(
      10,
      2,
    ): 5.0,
    tuple(
      10,
      3,
    ): 4.0,
    tuple(
      10,
      4,
    ): 6.0,
    tuple(
      10,
      5,
    ): 6.0,
    tuple(
      10,
      6,
    ): 7.0,
    tuple(
      10,
      7,
    ): 3.0,
    tuple(
      10,
      8,
    ): 7.0,
    tuple(
      10,
      9,
    ): 4.0,
    tuple(
      10,
      10,
    ): 0.0,
  })
# ---
# name: TestEditSequenceMetric.test_collect_as_dict_equivalence_with_snapshot[state]
  dict({
    tuple(
      1,
      1,
    ): 1.0,
    tuple(
      1,
      2,
    ): 2.0,
    tuple(
      1,
      3,
    ): 3.0,
    tuple(
      1,
      4,
    ): 4.0,
    tuple(
      1,
      5,
    ): 2.0,
    tuple(
      1,
      6,
    ): 4.0,
    tuple(
      1,
      7,
    ): 3.0,
    tuple(
      1,
      8,
    ): 2.0,
    tuple(
      1,
      9,
    ): 2.0,
    tuple(
      1,
      10,
    ): 1.0,
    tuple(
      2,
      1,
    ): 2.0,
    tuple(
      2,
      2,
    ): 0.0,
    tuple(
      2,
      3,
    ): 3.0,
    tuple(
      2,
      4,
    ): 4.0,
    tuple(
      2,
      5,
    ): 2.0,
    tuple(
      2,
      6,
    ): 4.0,
    tuple(
      2,
      7,
    ): 4.0,
    tuple(
      2,
      8,
    ): 2.0,
    tuple(
      2,
      9,
    ): 2.0,
    tuple(
      2,
      10,
    ): 2.0,
    tuple(
      3,
      1,
    ): 3.0,
    tuple(
      3,
      2,
    ): 3.0,
    tuple(
      3,
      3,
    ): 0.0,
    tuple(
      3,
      4,
    ): 4.0,
    tuple(
      3,
      5,
    ): 3.0,
    tuple(
      3,
      6,
    ): 4.0,
    tuple(
      3,
      7,
    ): 4.0,
    tuple(
      3,
      8,
    ): 3.0,
    tuple(
      3,
      9,
    ): 3.0,
    tuple(
      3,
      10,
    ): 2.0,
    tuple(
      4,
      1,
    ): 4.0,
    tuple(
      4,
      2,
    ): 4.0,
    tuple(
      4,
      3,
    ): 4.0,
    tuple(
      4,
      4,
    ): 2.0,
    tuple(
      4,
      5,
    ): 4.0,
    tuple(
      4,
      6,
    ): 4.0,
    tuple(
      4,
      7,
    ): 4.0,
    tuple(
      4,
      8,
    ): 4.0,
    tuple(
      4,
      9,
    ): 4.0,
    tuple(
      4,
      10,
    ): 4.0,
    tuple(
      5,
      1,
    ): 2.0,
    tuple(
      5,
      2,
    ): 2.0,
    tuple(
      5,
      3,
    ): 3.0,
    tuple(
      5,
      4,
    ): 4.0,
    tuple(
      5,
      5,
    ): 0.0,
    tuple(
      5,
      6,
    ): 4.0,
    tuple(
      5,
      7,
    ): 4.0,
    tuple(
      5,
      8,
    ): 2.0,
    tuple(
      5,
      9,
    ): 1.0,
    tuple(
      5,
      10,
    ): 2.0,
    tuple(
      6,
      1,
    ): 4.0,
    tuple(
      6,
      2,
    ): 4.0,
    tuple(
      6,
      3,
    ): 4.0,
    tuple(
      6,
      4,
    ): 4.0,
    tuple(
      6,
      5,
    ): 4.0,
    tuple(
      6,
      6,
    ): 0.0,
    tuple(
      6,
      7,
    ): 4.0,
    tuple(
      6,
      8,
    ): 4.0,
    tuple(
      6,
      9,
    ): 4.0,
    tuple(
      6,
      10,
    ): 4.0,
    tuple(
      7,
      1,
    ): 3.0,
    tuple(
      7,
      2,
    ): 4.0,
    tuple(
      7,
      3,
    ): 4.0,
    tuple(
      7,
      4,
    ): 4.0,
    tuple(
      7,
      5,
    ): 4.0,
    tuple(
      7,
      6,
    ): 4.0,
    tuple(
      7,
      7,
    ): 0.0,
    tuple(
      7,
      8,
    ): 4.0,
    tuple(
      7,
      9,
    ): 4.0,
    tuple(
      7,
      10,
    ): 3.0,
    tuple(
      8,
      1,
    ): 2.0,
    tuple(
      8,
      2,
    ): 2.0,
    tuple(
      8,
      3,
    ): 3.0,
    tuple(
      8,
      4,
    ): 4.0,
    tuple(
      8,
      5,
    ): 2.0,
    tuple(
      8,
      6,
    ): 4.0,
    tuple(
      8,
      7,
    ): 4.0,
    tuple(
      8,
      8,
    ): 1.0,
    tuple(
      8,
      9,
    ): 2.0,
    tuple(
      8,
      10,
    ): 2.0,
    tuple(
      9,
      1,
    ): 2.0,
    tuple(
      9,
      2,
    ): 2.0,
    tuple(
      9,
      3,
    ): 3.0,
    tuple(
      9,
      4,
    ): 4.0,
    tuple(
      9,
      5,
    ): 1.0,
    tuple(
      9,
      6,
    ): 4.0,
    tuple(
      9,
      7,
    ): 4.0,
    tuple(
      9,
      8,
    ): 2.0,
    tuple(
      9,
      9,
    ): 1.0,
    tuple(
      9,
      10,
    ): 2.0,
    tuple(
      10,
      1,
    ): 1.0,
    tuple(
      10,
      2,
    ): 2.0,
    tuple(
      10,
      3,
    ): 2.0,
    tuple(
      10,
      4,
    ): 4.0,
    tuple(
      10,
      5,
    ): 2.0,
    tuple(
      10,
      6,
    ): 4.0,
    tuple(
      10,
      7,
    ): 3.0,
    tuple(
      10,
      8,
    ): 2.0,
    tuple(
      10,
      9,
    ): 2.0,
    tuple(
      10,
      10,
    ): 0.0,
  })
# ---
# name: TestEditSequenceMetric.test_collect_as_matrix_equivalence_with_snapshot[event]
  '''
  ,1,2,3,4,5,6,7,8,9,10
  1,4.0,15.0,12.0,11.0,17.0,11.0,11.0,11.0,10.0,11.0
  2,15.0,2.0,14.0,14.0,16.0,15.0,15.0,15.0,15.0,16.0
  3,12.0,14.0,2.0,12.0,18.0,13.0,11.0,12.0,11.0,12.0
  4,11.0,14.0,12.0,0.0,16.0,12.0,10.0,10.0,9.0,11.0
  5,17.0,16.0,18.0,16.0,5.0,17.0,17.0,17.0,17.0,17.0
  6,11.0,15.0,13.0,12.0,17.0,2.0,12.0,13.0,12.0,13.0
  7,11.0,15.0,11.0,10.0,17.0,12.0,1.0,8.0,7.0,10.0
  8,11.0,15.0,12.0,10.0,17.0,13.0,8.0,4.0,7.0,10.0
  9,10.0,15.0,11.0,9.0,17.0,12.0,7.0,7.0,0.0,10.0
  10,11.0,16.0,12.0,11.0,17.0,13.0,10.0,10.0,10.0,0.0
  
  '''
# ---
# name: TestEditSequenceMetric.test_collect_as_matrix_equivalence_with_snapshot[interval]
  '''
  ,1,2,3,4,5,6,7,8,9,10
  1,1.0,6.0,5.0,6.0,6.0,7.0,5.0,7.0,5.0,5.0
  2,6.0,1.0,6.0,6.0,6.0,7.0,6.0,7.0,4.0,5.0
  3,5.0,6.0,0.0,6.0,6.0,7.0,3.0,7.0,4.0,4.0
  4,6.0,6.0,6.0,0.0,6.0,7.0,5.0,6.0,6.0,6.0
  5,6.0,6.0,6.0,6.0,1.0,6.0,6.0,7.0,6.0,6.0
  6,7.0,7.0,7.0,7.0,6.0,0.0,7.0,7.0,7.0,7.0
  7,5.0,6.0,3.0,5.0,6.0,7.0,1.0,7.0,4.0,3.0
  8,7.0,7.0,7.0,6.0,7.0,7.0,7.0,1.0,7.0,7.0
  9,5.0,4.0,4.0,6.0,6.0,7.0,4.0,7.0,0.0,4.0
  10,5.0,5.0,4.0,6.0,6.0,7.0,3.0,7.0,4.0,0.0
  
  '''
# ---
# name: TestEditSequenceMetric.test_collect_as_matrix_equivalence_with_snapshot[state]
  '''
  ,1,2,3,4,5,6,7,8,9,10
  1,1.0,2.0,3.0,4.0,2.0,4.0,3.0,2.0,2.0,1.0
  2,2.0,0.0,3.0,4.0,2.0,4.0,4.0,2.0,2.0,2.0
  3,3.0,3.0,0.0,4.0,3.0,4.0,4.0,3.0,3.0,2.0
  4,4.0,4.0,4.0,2.0,4.0,4.0,4.0,4.0,4.0,4.0
  5,2.0,2.0,3.0,4.0,0.0,4.0,4.0,2.0,1.0,2.0
  6,4.0,4.0,4.0,4.0,4.0,0.0,4.0,4.0,4.0,4.0
  7,3.0,4.0,4.0,4.0,4.0,4.0,0.0,4.0,4.0,3.0
  8,2.0,2.0,3.0,4.0,2.0,4.0,4.0,1.0,2.0,2.0
  9,2.0,2.0,3.0,4.0,1.0,4.0,4.0,2.0,1.0,2.0
  10,1.0,2.0,2.0,4.0,2.0,4.0,3.0,2.0,2.0,0.0
  
  '''
# ---
